Fix page layout problem

--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,7 @@
 html,
 body,
 body > div {
-	height: 100vh;
+	min-height: 100vh;
 }
 
 body {
